fixed x overflow issue

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -23,6 +23,7 @@
 
 body {
     background-color: #aaa;
+    overflow-x: hidden;
 }
 
 .city {
